--- a/index.html
+++ b/index.html
@@ -12,62 +12,84 @@
     <style>
         body {
             background-color: rgb(56, 54, 54);
+            margin: 0; 
+            font-family: Arial, sans-serif; 
         }
+
+        .navbar-nav {
+            display: flex;
+            justify-content: flex-end;
+        }
+
         .nav-link {
-            position: relative;
+            color: #000; 
+            margin-right: 20px; 
         }
-        .pricing {
-            position: relative;
-            left: 860px;
+
+        #home {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column; 
+            height: 100vh; 
         }
-        .coins {
-            position: relative;
-            left: 760px;
-        }
-        .home {
-            position: relative;
-            left: 660px;
-        }
+
         h1 {
             color: antiquewhite;
-            position: relative;
-            top: 230px;
-            margin-left: 20px;
-            font-size: 70px;
+            font-size: 4vw;
+            text-align: center;
+            margin-top: 20px;
         }
+
         .button {
-            position: relative;
-            top: 60px;
-            margin-left: 49px;
-            border: transparent;
             background-color: rgb(106, 106, 247);
-            border-radius: 37px;
-            padding: 10px;
             color: wheat;
+            border: none;
+            border-radius: 20px;
+            padding: 10px 20px; 
+            font-size: 1.5vw; 
+            cursor: pointer;
         }
+
         .logo {
-            position: relative;
-            left: 700px;
-            bottom: 60px;
+            width: 50%;
+            max-width: 300px; 
+            margin-top: 20px; 
         }
-        .hedding {
+
+        .heading {
             color: white;
-            font-size: 40px;
-            font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-            position: relative;
-            left: 350px;
-            top: 110px;
+            font-size: 2vw;
+            text-align: center;
+            margin-top: 50px;
         }
-        .container {
-            border: 2px solid rgb(245, 204, 155);
-            background-color: rgb(250, 225, 193);
-            height: 300px; 
-            width: 300px; 
-            display: inline-block;
-            margin:60px;
-            padding:40px; 
-           
+
+        #card-container {
+            display: flex;
+            flex-wrap: wrap; 
+            justify-content: center;
         }
+
+        .coins-container {
+            display: block;
+        }
+
+        .pagination {
+            margin-top: 20px;
+            display: flex;
+            justify-content: center;
+        }
+
+        .pagination .page-item {
+            margin: 0 5px;
+            cursor: pointer;
+        }
+
+        .pagination .page-item:hover {
+            color: #fff;
+            background-color: #6a6af7;
+        }
+
         .card {
             border: 1px solid #be1414;
             border-radius: 5px;
@@ -83,43 +105,28 @@
             align-items: center;
             justify-content: center;
         }
+
         .card-img-top {
             width: 120px; 
             height: 120px; 
             margin-bottom:10px; 
         }
-        .pagination {
-            margin-top: 20px;
-            display: flex;
-            justify-content: center;
-        }
-        .pagination .page-item {
-            margin: 0 5px;
-            cursor: pointer;
-        }
-        .pagination .page-item.active .page-link {
-            background-color: rgb(106, 106, 247);
-            border-color: rgb(106, 106, 247);
-        }
-        .coins-container {
-            display: none;
-        }
-        .buttonn{
-            /* position: relative;
-            bottom:-180px;
-            left: 20px; */
+
+        .buttonn {
             border: transparent;
             background-color:#ffdcd5;
-            height:40px;
+            height: 40px;
             border-radius: 20px;
-            width:120px;
+            width: 120px;
         }
-        .buttonn:hover{
+
+        .buttonn:hover {
             background-color:#f83535;
             color: aqua;
             box-shadow: 30px 30px 20px solid rgb(244, 196, 109);
         }
-        .card:hover{
+
+        .card:hover {
             box-shadow: 10px 10px 50px rgba(255, 0, 0, 0.429);
             transform: scaleY(1.1);
         }
@@ -139,19 +146,16 @@
         </div>
     </nav>
     <div id="home">
-        <h1>Buy $ Sell Digital<br>Assets In The <br>Crypto</h1>
+        <h1>Buy & Sell Digital Assets In The Crypto</h1>
         <button class="button">GET STARTED</button>
         <img class="logo" src="./pngwing.com (1).png" height="500px" />
     </div>
     <div id="coins" class="coins-container">
-        <!-- <p class="hedding">CRYPTO PRICE TRACKER</p> -->
-     </div>
-    <div id="card-container" class="row justify-content-center">
-
+        <!-- <p class="heading">CRYPTO PRICE TRACKER</p> -->
     </div>
+    <div id="card-container" class="row justify-content-center"></div>
     <nav aria-label="Page navigation example">
-        <ul id="pagination" class="pagination">
-        </ul>
+        <ul id="pagination" class="pagination"></ul>
     </nav>
     <script>
         async function getData() {
@@ -171,52 +175,40 @@
 
         function displayPage(pageNumber, data) {
             try {
-                const startIndex = (pageNumber - 1)*10;
+                const startIndex = (pageNumber - 1) * 10;
                 const endIndex = Math.min(startIndex + 10, data.length);
                 const cardContainer = document.getElementById('card-container');
                 cardContainer.innerHTML = '';
-                for (i = startIndex; i < endIndex; i++) {
+                for (let i = startIndex; i < endIndex; i++) {
                     const item = data[i];
-
                     const imageUrl = item.image;
                     const coinName = item.name;
                     const coinSymbol = item.symbol;
                     const coinPrice = item.current_price;
                     let cardDiv = document.createElement("div");
                     cardDiv.setAttribute("class", "card");
-
-
                     let coinImg = document.createElement("img");
                     coinImg.setAttribute("class", "card-img-top");
                     coinImg.setAttribute("src", imageUrl);
                     coinImg.setAttribute("alt", `${coinName} logo`);
-
                     let cardBodyDiv = document.createElement("div");
                     cardBodyDiv.setAttribute("class", "card-body");
-
                     let cardTitle = document.createElement("h5");
                     cardTitle.textContent = `${coinName} (${coinSymbol})`;
-
-
                     let cardPrice = document.createElement("p");
                     cardPrice.textContent = `Current Price: $${coinPrice}`;
-
-                    let getbtn=document.createElement("button")
-                    getbtn.innerHTML="VIEW"
-                    getbtn.setAttribute("class","buttonn")
-
-                    getbtn.addEventListener("click",()=>{
-                        window.localStorage.setItem("data",JSON.stringify(data[i]))
-                        window.location.assign("./dum2.html")
-                    })
-                   
-
+                    let getbtn = document.createElement("button");
+                    getbtn.innerHTML = "VIEW";
+                    getbtn.setAttribute("class", "buttonn");
+                    getbtn.addEventListener("click", () => {
+                        window.localStorage.setItem("data", JSON.stringify(data[i]));
+                        window.location.assign("./index2.html");
+                    });
                     cardBodyDiv.appendChild(cardTitle);
                     cardBodyDiv.appendChild(cardPrice);
-
                     cardDiv.appendChild(coinImg);
                     cardDiv.appendChild(cardBodyDiv);
-                    cardDiv.appendChild(getbtn)
+                    cardDiv.appendChild(getbtn);
                     cardContainer.appendChild(cardDiv);
                 }
                 updatePagination(pageNumber, data);
@@ -228,7 +220,7 @@
 
         function updatePagination(currentPage, data) {
             try {
-                const totalPages = Math.ceil(data.length /10);
+                const totalPages = Math.ceil(data.length / 10);
                 const pagination = document.getElementById('pagination');
                 pagination.innerHTML = '';
                 for (let i = 1; i <= totalPages; i++) {
@@ -276,4 +268,3 @@
     </script>
 </body>
 </html>
-
