--- a/index2.html
+++ b/index2.html
@@ -91,14 +91,14 @@
             background-image: url("https://img.freepik.com/premium-photo/abstract-virtual-financial-graph-hologram-blurry-contemporary-office-building-background-financial-trading-concept-multiexposure_258654-3411.jpg");
             background-repeat: no-repeat;
             background-size: cover;
-            margin: 0; /* Remove default body margin */
+            margin:0;
             font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
         }
 
         .box {
-            margin: 50px auto; /* Center the box horizontally */
-            width: 90%; /* Adjust box width to fit the screen */
-            max-width: 40em; /* Limit maximum width */
+            margin: 50px auto; 
+            width: 80%; 
+            max-width: 40em;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -106,17 +106,17 @@
             color: rgb(0, 0, 0);
             background-color: #1679ab80;
             border-radius: 30px;
-            padding: 20px; /* Add some padding */
+            padding: 20px; 
         }
 
         .box img {
-            max-width: 100%; /* Ensure image fits within its container */
-            height: auto; /* Preserve aspect ratio */
+            max-width: 100%; 
+            height: auto; 
         }
 
         h1,
         h3 {
-            margin: 10px 0; /* Add some spacing between headings */
+            margin: 10px 0; 
         }
 
         span {
@@ -124,17 +124,16 @@
         }
 
         @media screen and (max-width: 768px) {
-            /* Adjust styles for smaller screens (e.g., tablets) */
+            
             .box {
-                margin-top: 20px; /* Reduce top margin */
+                margin-top: 20px; 
             }
         }
 
         @media screen and (max-width: 576px) {
-            /* Adjust styles for even smaller screens (e.g., phones) */
             .box {
-                width: 95%; /* Adjust box width */
-                border-radius: 20px; /* Reduce border radius */
+                width: 95%; 
+                border-radius: 20px;
             }
         }
     </style>
